--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "main": "index.js",
   "author": "Ranniêr Reis <rannierreis@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "commit":"git-cz"
+  },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "3.3.0",
     "husky": "^6.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
