--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "NLW",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "author": "Ranniêr Reis <rannierreis@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "commit": "cz"
+    "commit": "cz",
+    "start": "nodemon ."
   },
   "husky": {
     "hooks": {
@@ -17,11 +18,16 @@
     "@commitlint/config-conventional": "^12.1.4",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "nodemon": "^2.0.12"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
   }
 }
